--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,6 @@
 [TELEGRAM]
 ACCESS_TOKEN = 6947456515:AAHLvkx--ImmMVJwAqmifH2aMcEXFGo3t8c
+[REDIS]
+HOST = edis-19878.c302.asia-northeast1-1.gce.cloud.redislabs.com
+PASSWORD = lcjsGhYQMqteL8LSNbcyKhIhpSPAuWWR
+REDISPORT = 19878
