--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,11 @@
 [TELEGRAM]
 ACCESS_TOKEN = 6947456515:AAHLvkx--ImmMVJwAqmifH2aMcEXFGo3t8c
 [REDIS]
-HOST = edis-19878.c302.asia-northeast1-1.gce.cloud.redislabs.com
+HOST = redis-11030.c1.ap-southeast-1-1.ec2.cloud.redislabs.com
 PASSWORD = lcjsGhYQMqteL8LSNbcyKhIhpSPAuWWR
-REDISPORT = 19878
+REDISPORT = 11030
+[CHATGPT]
+BASICURL = https://chatgpt.hkbu.edu.hk/general/rest
+MODELNAME = gpt-35-turbo-16k
+APIVERSION = 2023-12-01-preview
+ACCESS_TOKEN = 51bd34d3-2cb5-421b-bcef-1ad5b1bc9a07
