--- a/config.ini
+++ b/config.ini
@@ -6,6 +6,6 @@ PASSWORD = lcjsGhYQMqteL8LSNbcyKhIhpSPAuWWR
 REDISPORT = 11030
 [CHATGPT]
 BASICURL = https://chatgpt.hkbu.edu.hk/general/rest
-MODELNAME = gpt-35-turbo-16k
+MODELNAME = gpt-4-turbo
 APIVERSION = 2023-12-01-preview
-ACCESS_TOKEN = 51bd34d3-2cb5-421b-bcef-1ad5b1bc9a07
+ACCESS_TOKEN = 3fadeb93-9021-4822-829a-cd2042e6a450
